extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/dataflow/tests/test4.err
src/test/scala/org/bitbucket/inkytonik/kiama/example/dataflow/tests/test4.dataerr:2:1:error: string matching regex '[a-zA-Z]+' expected but end of source found

^
